# ssotos

./: .env.example  .gitignore  CLAUDE.md  Caddyfile  DEPLOYMENT.md  Dockerfile.api  Dockerfile.worker  alembic.ini  docker-compose.yml  pyproject.toml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
alembic/: env.py
alembic/versions/: 001_initial_schema.py  002_add_fts_and_pgvector.py  003_add_job_retry_and_checkpoint.py  004_add_job_approval_fields.py  005_add_idempotency_key.py
docs/: MCP_INTEGRATION.md  PRD_Knowledge_OS_Core_OSS_V1_REBUILT.md  PRD_Knowledge_OS_Core_OpenSource_V1.md  SSOT_Knowledge_OS_V1.md  STACK_DECISION_RECORD_Knowledge_OS_Core.md
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css
src/: __init__.py  app.py  main.py
src/agent/: __init__.py  runtime.py  tools.py
src/api/: __init__.py  admin.py  agent.py  approvals.py  audit.py  auth.py  copilot.py  exchange.py  jobs.py  policy.py  research.py  retrieval.py  sse.py  templates.py  vault.py
src/core/: audit.py  audit_events.py  event_bus.py  events.py  logging.py  otel.py
src/db/: __init__.py  database.py  session.py
src/mcp/: __init__.py  agent_server.py  base.py  research_server.py  retrieval_server.py  vault_server.py
src/middleware/: __init__.py  audit.py
src/models/: proposal.py
src/schemas/: __init__.py  agent.py  approval.py  common.py  copilot.py  exchange.py  jobs.py  research.py  retrieval.py  vault.py
src/services/: agent_brain_service.py  approval_service.py  chunking_service.py  copilot_service.py  crawl_service.py  docling_service.py  embedding_service.py  git_service.py  ingest_proposal_service.py  (+6 more)
workspace/: .gitignore
(+194 files in other folders)
